--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@
 dev = [
     "black>=22.12.0",
     "isort>=5.11.4",
+    "devtools>=0.10.0",
+    "ipython>=8.8.0",
 ]
 
 [project]
@@ -15,6 +17,7 @@ authors = [
 ]
 dependencies = [
     "typer>=0.7.0",
+    "docker>=6.0.1",
 ]
 requires-python = ">=3.11"
 license = {text = "GPL-3.0-only"}
