--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "typer>=0.7.0",
     "docker>=6.0.1",
     "boto3[crt]>=1.26.52",
+    "toolz>=0.12.0",
 ]
 requires-python = ">=3.11"
 license = {text = "GPL-3.0-only"}
